# main.go
@@ -6,6 +6,7 @@ import (
 
 	"github.com/FRanggaY/personal-portfolio-api/docs"
 	"github.com/FRanggaY/personal-portfolio-api/handlers"
+	"github.com/FRanggaY/personal-portfolio-api/handlers/public_handlers"
 	"github.com/FRanggaY/personal-portfolio-api/middlewares"
 	"github.com/FRanggaY/personal-portfolio-api/models"
 	"github.com/gorilla/mux"
@@ -33,6 +34,8 @@ func main() {
 	api.HandleFunc("/login", handlers.Login).Methods("POST")
 	api.HandleFunc("/register", handlers.Register).Methods("POST")
 	api.HandleFunc("/logout", handlers.Logout).Methods("GET")
+
+	api.HandleFunc("/public/user/{username}/skill", public_handlers.GetPublicFilteredPaginatedUserSkillDetail).Methods("GET")
 
 	apiProtect := r.PathPrefix(basePathRoute).Subrouter()
 	apiProtect.HandleFunc("/profile", handlers.Profile).Methods("GET")
